--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
+  firebase_core: ^3.4.1
+  cloud_firestore: ^5.4.1
+  firebase_auth: ^5.2.1
 
 dev_dependencies:
   flutter_test:
