--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^3.4.1
   cloud_firestore: ^5.4.1
   firebase_auth: ^5.2.1
+  auto_size_text:
 
 dev_dependencies:
   flutter_test:
