--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cloud_firestore: ^5.4.1
   firebase_auth: ^5.2.1
   auto_size_text:
+  shimmer: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+
 
 dev_dependencies:
   flutter_test:
